[gd_scene load_steps=6 format=3 uid="uid://cfg3dqnovulhk"]

[ext_resource type="Script" path="res://Scripts/PlayerScripts/PlayerController.gd" id="1_ofvov"]
[ext_resource type="Texture2D" uid="uid://c8xc3bw5llh5m" path="res://Assets/textures/Crosshair.png" id="2_nak0c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r6dem"]
radius = 0.25
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dt8xe"]
radius = 0.25
height = 1.0
radial_segments = 8
rings = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ccqie"]
height = 0.5
radius = 0.25

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ofvov")
speed = 3.218

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
fov = 90.0
near = 0.01

[node name="interaction_ray" type="RayCast3D" parent="head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="TextureRect" type="TextureRect" parent="head/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nak0c")
stretch_mode = 2

[node name="flashLight" type="SpotLight3D" parent="head/Camera3D"]
spot_angle = 49.2187

[node name="hold_position" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_r6dem")

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
cast_shadow = 0
mesh = SubResource("CapsuleMesh_dt8xe")

[node name="foot" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("CylinderShape3D_ccqie")

[node name="ground_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(2.08165e-12, -0.25, 2.08165e-12)
